--- a/README.Rmd
+++ b/README.Rmd
@@ -27,5 +27,6 @@ This is a basic example which shows you how to solve a common problem:
 ```{r example}
 library(Assemblage)
 ## basic example code
+## Go see Github example file
 ```
-Go see Github example file
+
