--- a/README.Rmd
+++ b/README.Rmd
@@ -4,12 +4,21 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
+
 # Assemblage
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of Assemblage is to optimize the weights of subcomponents to maximize the predictive capability of an aggregate.
+The goal of Assemblage is to ...
 
 ## Installation
 
@@ -27,6 +36,5 @@ This is a basic example which shows you how to solve a common problem:
 ```{r example}
 library(Assemblage)
 ## basic example code
-## Go see Github example file
 ```
 
